# AgentRx-replication

./: .dockerignore  .gitignore  .gitmodules  .latexindent.yaml  .mdformat.toml  .pre-commit-config.yaml  CITATION.cff  LICENSE  Makefile  NOTICE.md  README.md  conftest.py  example.env  main.py  pyproject.toml  ras.md  run_minimal.py
data/benchmark/: benchmark_30.json
data/internal/: README.md
data/otel/: run_001.otel.json
docker/analysis/: Dockerfile
docs/: data-artifacts.md  operacao.md
docs/adr/: 0001-experimentos-segregados.md  0006-injecao-scriptada-log-imparcial.md  0006-injecao-scriptada-renderizacao-cega.md  0009-agentrx-judge-only-ir-canonica.md  0010-decomposicao-mas-200-linhas-pipeline-segregado.md  0011-juiz-interposicao-copilot-bin.md  0012-produtos-experimento-data-experiment.md  0013-corpus-por-modelo-do-mas.md  0014-braco-a-json-estruturado.md  0015-contexto-execucao-passo-causa.md  README.md  TEMPLATE.md
docs/prd/: PRD-INDEX.md  (+11 more)
scripts/: check_file_size.py  collect_agentrx.py  derive_trajectories.py  generate_benchmark.py  init.sh  run_judge.py  simulate.py
tests/: README.md  test_agent_backoff.py  test_agent_resilience.py  test_benchmark.py  test_collect_csv.py  test_collect_parity.py  test_csv_integrity.py  test_documentation.py  test_execution_context.py  test_faults.py  test_file_size.py  test_impartiality.py  test_judge_runs.py  test_judge_scoring.py  test_judge_shims.py  test_manifest.py  test_paths_namespace.py  test_r5_weak.py  test_r_environment.py  test_run_judge_cli.py  test_tasks.py  test_traces.py  test_trajectories.py
(+3989 files in other folders)
